<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"/>.
<com.google.android.material.textfield.TextInputEditText

            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_add_24"
            android:drawablePadding="20dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#ffffff" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#ffffff" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernames"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#ffffff" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwords"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="20dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#ffffff" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:text="@string/register"

            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/clickhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:text="Click here for login"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>